# 3dge

./: Cargo.toml  README.md  resources.md
assets/: assets.gltf  player.gltf
source/assets/: assets.blend  assets.blend1  player.blend  player.blend1  player_1024.xcf  player_color_1024.xcf
src/: boxed_scene.rs  camera.rs  core_loop.rs  core_state.rs  errors.rs  fps_counter.rs  game.rs  gfx_thread.rs  gltf_loader.rs  into_boxed_scene.rs  lib.rs  main.rs  model.rs  player.rs  pressed_keys.rs  scene.rs  scene_object.rs  scheduler.rs  static_entity.rs
src/events/: errors.rs  mod.rs  winit.rs
src/gfx/: camera_accessor.rs  camera_geometry.rs  camera_object.rs  color.rs  command.rs  errors.rs  geometry.rs  geometry_accessor.rs  geometry_id.rs  geometry_object.rs  mod.rs  plane.rs  primitive.rs  primitives.rs  rectangle.rs  vertices.rs  window.rs
src/gfx/vulkan/: errors.rs  geometry_data.rs  geometry_entry.rs  mod.rs  vertex.rs  vertex_def.rs  vulkan_geometry.rs  vulkan_gfx.rs  vulkan_gfx_instance.rs  vulkan_gfx_loop.rs  vulkan_gfx_loop_builder.rs  vulkan_plane.rs  vulkan_primitive.rs  vulkan_primitives.rs  vulkan_window.rs  vulkano_win_window.rs
src/gfx/vulkan/shaders/: basic.rs
src/sg/: mod.rs
src/texture/: builtin.rs  errors.rs  mod.rs  texture.rs
