[package]
name = "threedge"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]

[features]
default = ["gfx-vulkan"]
gfx-vulkan = ["vulkano", "vulkano-shader-derive", "vulkano-win"]

[dependencies]
winit = "*"
cgmath = "0.15"
error-chain = "*"
bit-vec = "0.4"
image = "*"
shuteye = "^0"
log = "0.3"
env_logger = "0.4"

[dependencies.vulkano]
version = "0.6"
optional = true

[dependencies.vulkano-shader-derive]
version = "0.6"
optional = true

[dependencies.vulkano-win]
version = "0.6"
optional = true
